MsvcToolChain: Allow users to clone or create their own MSVC toolchains

Users who want to add more parameters to their vcvars call (their target
Windows SDK or other parameters like which toolset to use) now have the
chance to do so.

MSVC toolchains can be cloned or created from scratch. At the moment
every possible architecture is listed and installed toolchains are not
checked. Additionally broken Abis can be configured using the Abi
widget, but by allowing that, users are free to configure whatever
(broken) toolchain they want.

Task-number: QTCREATORBUG-22163
Change-Id: I5bbdec4174b70dc528d0b1f8de86a605d6981f00
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>